<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grdientbg"
    android:weightSum="3"
    android:orientation="vertical">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_below="@+id/top">


        <LinearLayout
            android:id="@+id/img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <FrameLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/qn2"
                    android:orientation="vertical"
                    android:visibility="visible">

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/channel1"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="10.0dip"
                android:background="@drawable/booooooo"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:fontFamily="@font/ert"
                    android:gravity="center"
                    android:text="@string/mi1"
                    android:textColor="@color/fontcolor"
                    android:textSize="18.0dip" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/channel2"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="10.0dip"
                android:background="@drawable/booooooo"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:fontFamily="@font/ert"
                    android:gravity="center"
                    android:text="@string/mi2"
                    android:textColor="@color/fontcolor"
                    android:textSize="18.0dip" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/channel3"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="10.0dip"
                android:background="@drawable/booooooo"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:fontFamily="@font/ert"
                    android:gravity="center"
                    android:text="@string/mi3"
                    android:textColor="@color/fontcolor"
                    android:textSize="18.0dip" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:background="@drawable/qb1"
        android:visibility="visible">
    </FrameLayout>
</LinearLayout>